# leetcode-notebook-generator

./: .gitignore  .pre-commit-config.yaml  README.md  main.py  notebook_generator.py  problem_info.py  pyproject.toml  pyrightconfig.json  requirements.txt  web_scraper.py
leetcode_notebook_generator/: main.py  notebook_generator.py  problem_info.py  web_scraper.py
sample_output/: 1- Two Sum.ipynb
tests/: __init__.py  problem_info_test.py  web_scraper_test.py
