[tool.poetry]
name = "leetcode-notebook-generator"
version = "0.1.0"
description = ""
authors = ["ixora-0 <phunglegend.2004@gmail.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
beautifulsoup4 = "^4.12.2"
nbformat = "^5.9.2"
python-dotenv = "^1.0.0"
selenium = "^4.16.0"
pre-commit = "^3.6.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
